--- a/VagrantFile
+++ b/VagrantFile
@@ -1,5 +1,7 @@
-Vagrant.configure("2") do |config|
-    config.vm.box = "debian/stretch64"
+VAGRANTFILE_API_VERSION = '2'
+
+Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
+    config.vm.box = "https://files.devuan.org/devuan_ascii/virtual/devuan_ascii_2.0.0_amd64_vagrant.box"
 	config.vm.network "private_network", ip: "192.168.33.230"
 	config.vm.hostname = "webdev"
     config.vm.synced_folder "source", "/vagrant/source",
